# h5toGrid

./: Pipfile  bin2h5.spec  cfg_dataclasses.py  csv_to_h5vaex.py  ecmwf_api_client.py  filt_wavelet.py  filters.py  filters_scipy.py  gpx2csv.py  graphics.py  graphics_tk-.py  grid2d_vsz.py  grid3d_vsz.py  gs_surfer.py  h5_2mdb.py  h5toGpx.py  h5toGpx_CTD.ini  h5toGpx_CTD_SST.ini  h5toGpx_CTD_Sea_and_Sun.ini  h5toMdb.py  loadBaranovText2h5.py  magneticDec.ini  magneticDec.py  other_filters.py  plot.py  plot_int.py  py3.10x64h5togrid.yml  py3.7x64h5togrid.yml  py3.7x64h5togrid_no_pip0.yml  pyproject.toml  readme.md  readme[RU].md  sys_path_tcm.py  utils2init.py  utils4work.py  utils_time.py  utils_time_corr.py  veuszPProc_CTDends.py  veuszPropagate.py
ADCP/: ADCP_load.py  RDCP_timings.py  automate_winadcp.py  call_TRDI_BBSub.py  fileNameTime.py  loadNortekSignature_txt.py  loadRDCP.ini  loadRDCP.py  readWorkhorseIMOS.m  winriver2mmt.ini  winriver2ttf.ini  winriver2ttf.py
SMS2GPX/: SMS2GPX.ini  SMS2GPX.py  autofon_coord_call_script.py  work.leo
env/: py3.11h5togrid.yml
gps_tracker/: SMS2GPX.ini  SMS2GPX.py  autofon_coord.py  autofon_coord_call_script.py  gmail_read.py  mail_parse.py  readme.txt  setup4SMS2GPX.bat  setup4SMS2GPX.py  work.leo
inclinometer/: 1710VeuszPropagate.py  1710VeuszPropagate_loadingCal.py  180418incl_load.py  1809VeuszPropagate.py  1810VeuszPropagate.py  190711incl_load_experiment.py  190901incl_calibr.py  191101incl_load.py  200525incl_h5clc_many2one.py  200813incl_calibr.py  200813incl_load.py  filter_periodic_spike.py  h5_create_vds.py  h5from_veusz_coef.py  h5inclinometer_coef.py  h5v_stack_incl.py  incl_calibr.py  incl_h5clc.py  (+13 more)
(+354 files in other folders)
